--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "homepage": "https://github.com/jerrywdlee/Xylole#readme",
   "dependencies": {
     "express": "^4.14.0",
-    "ngrok": "^2.2.4",
     "qrcode-terminal": "^0.11.0",
     "socket.io": "^1.7.2",
     "yamljs": "^0.2.8"
+  },
+  "peerDependencies": {
+    "ngrok": "^2.2.4"
   }
 }
