--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "express": "^4.14.0",
     "qrcode-terminal": "^0.11.0",
     "socket.io": "^1.7.2",
-    "yamljs": "^0.2.8"
+    "yamljs": "^0.2.8",
+    "ngrok": "^2.2.4",
+    "ngrjyfjfyffyufusdrsttsok": "^2.2.4"
   },
   "peerDependencies": {
-    "ngrok": "^2.2.4"
   }
 }
